syntax = "proto3";

option java_package = "com.easidiomas.auth";

package auth;

service AuthenticationService {
  rpc GenerateToken (LoginInfo) returns (Token) {}
  rpc GeneratePassport (Token) returns (Passport) {}
}

message LoginInfo {
  string username = 1;
  string password = 2;
}

message Token {
  string token = 1;
}

message Passport {
  string userId = 1;
  string username = 2;
  string name = 3;
  string surname = 4;
  string email = 5;
  string userProfilePicUrl = 6;
  string expirationDate = 7;
}